# rv-assign1

./: .gitignore  CMakeLists.txt  CMakeLists_task1_backup.txt
code/: VID5_left.xml  VID5_right.xml  assign1_task2.cpp  assign1_task3.cpp  in_VID5_left.xml  in_VID5_right.xml  stereo_calib.xml  stereo_calib_best.xml
fileoutput/: out_camera_data_left.xml  task2_pairs_log.txt
fileoutput/task1/: out_camera_data_right.xml
fileoutput/task2/: extrinsics.yml
